[13381] Request to apply JVM best practice for AM Restful server Add validation for java7++ support, otherwise will echo error.